<resources>
    <string name="app_name">AquaLang</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign In</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="save">Save</string>
    <string name="course_title">Course title</string>
    <string name="author_name">Author Name</string>
    <string name="description">Description:</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="course_image">Course image</string>
    <string name="start">Start</string>
    <string name="about">About</string>
    <string name="courses">Courses</string>
    <string name="user">User</string>
    <string name="logout">Logout</string>
    <string name="logo">logo</string>
    <string name="topic_name">Topic name</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">unsubscribe</string>
    <string name="lesson_name">Lesson name</string>
    <string name="theory">Theory:</string>
    <string name="start_exercises">Start Exercises</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="done">Done</string>
    <string name="correct_answer">Correct answer!</string>
    <string name="incorrect_answer">Incorrect answer :(</string>
    <string name="exercise_title">Exercise title</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="submit_answer">Submit answer</string>
    <string name="glossary">Glossary</string>
    <string name="well_done">Well done!</string>
    <string name="you_scored">You scored</string>
    <string name="out_of">out of</string>
    <string name="app_nikita_averyanov">App: Nikita Averyanov</string>
    <string name="server_sofya_kopalova">Server: Sofya Kopalova</string>
    <string name="thanks_to_our_friend_for_the_logo">Thanks to our friend for the logo</string>
    <string name="translation_example">Repository - репозиторий</string>
    <string name="repository">Repository</string>
    <string name="repository_ru">репозиторий</string>
    <string name="repository_definition">a place where something is stored in large quantities</string>
    <string name="dash">-</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="definition">Definition</string>
    <string name="add">Add</string>
    <string name="user_editing_not_yet_available">User editing is not available yet</string>
</resources>