<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.aqualang.education.course.CourseViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".education.course.CourseFragment">

        <TextView
            android:id="@+id/courseInformationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.course.title}"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/course_title" />

        <TextView
            android:id="@+id/courseInformationAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@{viewModel.course.authorName}"
            app:layout_constraintStart_toStartOf="@+id/courseInformationTitle"
            app:layout_constraintTop_toBottomOf="@+id/courseInformationTitle"
            tools:text="@string/author_name" />

        <ImageView
            android:id="@+id/courseInformationImage"
            android:layout_width="180dp"
            android:layout_height="160dp"
            android:contentDescription="@string/course_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseInformationImage" />

        <TextView
            android:id="@+id/courseInformationDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{viewModel.course.description}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description"
            tools:text="@string/lorem_ipsum" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/topicList"
            android:name="com.example.aqualang.education.topicList.TopicListFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseInformationDescription" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>