<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="glossaryWord"
            type="com.example.domain.models.GlossaryWord" />
    </data>

    <androidx.cardview.widget.CardView
        style="@style/AppTheme"
        android:layout_margin="8dp"
        app:cardCornerRadius="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="8dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/glossaryWordTextView"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@{glossaryWord.word}"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/repository" />

            <TextView
                android:id="@+id/dashTextView"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/dash"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/glossaryWordTextView"
                app:layout_constraintStart_toEndOf="@+id/glossaryWordTextView" />

            <TextView
                android:id="@+id/glossaryTranslationTextView"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{glossaryWord.translation}"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/dashTextView"
                app:layout_constraintStart_toEndOf="@+id/dashTextView"
                tools:text="@string/repository_ru" />

            <TextView
                android:id="@+id/glossaryDefinitionTextView"
                style="@style/WhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@{glossaryWord.definition}"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/glossaryWordTextView"
                tools:text="@string/repository_definition" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>